# data-ingestion-experiment-otp

./: README.md  email_parser.py  main.py  pyproject.toml  sample_email.eml  zepto_login.py
deployment/api/: gmail_pubsub.tf  variables.tf
gmail-otp-listener/: .env.local  .gitignore  CLAUDE.md  README.md  client_secret.json  pyproject.toml
gmail-otp-listener/api/: config.py  login_workflow.py  main.py  playwright_login_runner.py
